--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
  <nav>
-   <a href="Index.html">Home</a> |
+   <a href="index.html">Home</a> |
    <a href="industry.html">Healthcare Industry</a> |
  </nav>
     <header>
@@ -59,4 +59,5 @@
            <p>&copy; Carmen Hampton, 2025 Personal Values</p>
        </footer>
  </body>
+
 </html>
